--- a/DQD/Pages/ContentPage.xaml
+++ b/DQD/Pages/ContentPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DQD.Net.Pages"
+    xmlns:Gifs ="using:ImageLib.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -42,16 +43,22 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
 
-        <Border Background="{ThemeResource DQDBackground}"
+        <Grid Background="{ThemeResource DQDBackground}"
                 Height="60"
                 VerticalAlignment="Top">
             <TextBlock Name="ContentTitle"
-                       FontSize="27"
-                       Margin="5,2,0,2"
+                       FontSize="24"
+                       Margin="15,2,0,2"
                        HorizontalAlignment="Left"
                        VerticalAlignment="Center"
                        Foreground="{ThemeResource AppPersonalTextColorPure}"/>
-        </Border>
+            <Rectangle Height="1"
+                       Fill="{ThemeResource DQDSummTextColor}"
+                       VerticalAlignment="Bottom"/>
+            <Rectangle Height="30" Width="10"
+                       Fill="#F0F0F0"
+                       HorizontalAlignment="Left"/>
+        </Grid>
         <Border Background="{ThemeResource AppPersonalExtraBackground}"
                 Margin="0,60,0,0">
             <ScrollViewer>
@@ -61,17 +68,17 @@
                                    Foreground="{ThemeResource DQDSummTextColor}"
                                    FontSize="12"
                                    FontWeight="Thin"
-                                   Margin="5"/>
+                                   Margin="10,5,5,5"/>
                         <TextBlock Name="ContentDate" 
                                    Foreground="{ThemeResource DQDSummTextColor}"
                                    FontSize="12"
                                    FontWeight="Thin"
-                                   Margin="5"/>
+                                   Margin="10,5,5,5"/>
                     </StackPanel>
                     <Rectangle Height="1" 
                                Margin="5,0,5,0"
                                Fill="{ThemeResource BorderTicknessColor01}"/>
-                    <StackPanel Name="ContentStack" Margin="5,0,5,0"/>
+                    <StackPanel Name="ContentStack" Margin="10,0,10,0"/>
                 </StackPanel>
             </ScrollViewer>
         </Border>
